--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Maystar777/webpack-lab/issues"
   },
-  "homepage": "https://github.com/Maystar777/webpack-lab#readme"
+  "homepage": "https://github.com/Maystar777/webpack-lab#readme",
+  "devDependencies": {
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
+  }
 }
