--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "webpack从零搭建",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=development --entry=./src/index.js --output=./dist/main.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
