--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --config ./config/webpack.prod.js",
     "dev": "webpack serve --config ./config/webpack.dev.js",
+    "dash": "webpack-dashboard -- webpack serve --config ./config/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,11 +32,13 @@
     "react-dom": "^19.0.0",
     "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^4.0.0",
     "thread-loader": "^4.0.4",
     "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
+    "webpack-dashboard": "^3.3.8",
     "webpack-dev-server": "^5.2.0"
   }
 }
